     a statement handle, even on no results. Previously, they returned undef directly.
   Callers can check if the returned handle contains any rows.
   [Greg Sabino Mullane]

 - The $dbh->tables method will always return a list, even if it is empty.
   [Greg Sabino Mullane]

 - Adjust tests to force loading proper version of DBD::Pg
   [Greg Sabino Mullane]


Version 3.13.0  (released June 17, 2020)

 - Redo the "last_result" internals in dbdimp.c, which 
     fixes a memory leak.
   [Greg Sabino Mullane]
   (RT ticket #132812)

 - Fix regression in Perl length() for returned query results
   [Jon Jensen]
   (Github issue #72)

 - Make $sth->finish() do a little less. Notably, even 
     after calling finish(), pg_error_field will still work
     on the last action performed.
   [Greg Sabino Mullane]

 - Tweak tests so Windows boxes pass
   [Greg Sabino Mullane]


Version 3.12.3  (released June 5, 2020)

 - Prevent DBI from flipping AutoCommit to 'on' after a failed commit
   [Greg Sabino Mullane]
   (Github issue #71)


Version 3.12.2  (released June 4, 2020)

 - Revert overly aggressive testing shortcut as it can cause installs to fail
   [Greg Sabino Mullane, with apologies]


Version 3.12.1  (released June 3, 2020)

 - Remove test that assumed '(12,34)' is an invalid entry for type "circle",
     as the Postgres source code changed this behavior on April 7, 2020
   [Greg Sabino Mullane]
   (RT ticket #132740)


Version 3.12.0  (released May 7, 2020)

 - Add CONTRIBUTING.md file

 - Return the table info row last in statistics_info.
   This fixes statistics_info on pre-8.3 servers.
   [Dagfinn Ilmari Mannsåker]

 - Fix ASC_OR_DESC field in statistics_info
   [Dagfinn Ilmari Mannsåker]

 - Indicate NULL ordering in statistics_info
   [Dagfinn Ilmari Mannsåker]


Version 3.11.1  (released April 28, 2020)

 - Adjust Makefile to fix failing 'fulltest' target on BSD systems
   [Slaven Rezić]
   (RT ticket #132412)


Version 3.11.0  (released April 23, 2020)
